# outil-identification-conflits-interets-graphes

./: .gitignore  README.md  pyproject.toml
configs/: generation.yml  neo4j.yml  scoring.yml
queries/: detection.cypher  schema.cypher  similarity.cypher
scripts/: generate_dataset.py
src/conflict_detector/: settings.py
src/conflict_detector/app/: main.py
src/conflict_detector/cleaning/: normalizers.py  pipeline.py  validators.py
src/conflict_detector/detection/: base.py  registry.py
src/conflict_detector/detection/rules/: bribes_gifts.py  circular_network.py  direct_link.py  double_match.py  financial_concentration.py  ghost_supplier.py  identity_match.py  internal_network.py  multiple_hidden_links.py  shell_entity.py  star_pattern.py
src/conflict_detector/domain/: enums.py  models.py  scenario_catalog.py
src/conflict_detector/generation/: config.py  factory.py  scenario_injector.py  writer.py
src/conflict_detector/graph/: connection.py  loader.py  schema.py  similarity.py
src/conflict_detector/io/: csv_reader.py
src/conflict_detector/reporting/: exporters.py  html_report.py
src/conflict_detector/scoring/: scorer.py
tests/: test_end_to_end_small_dataset.py  test_generation_counts.py  test_normalizers.py  test_rule_contracts.py  test_scoring.py
