[project]
name = "conflict-detector"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "faker>=25.0.0",
  "neo4j>=5.20.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "pytest>=9.0.3",
  "typer>=0.12.0"
]

[project.scripts]
conflict-detector = "conflict_detector.app.main:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
